fix: Center-aligns logo in navbar
Sets the logo container to use a flexbox for vertical and
horizontal centering in the navbar. Adjusts template and
CSS to streamline logo presentation and improve aesthetic
consistency.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -233,6 +233,11 @@ h5 {
     .slogan {
       display: none;
     }
+
+    #logo-wrapper {
+      display: flex;
+      justify-content: center;
+    }
   }
 }
 
